Se habilita la busqueda y se muestra el usuario logeado

--- a/mercury-server/web-app/css/themes/drastic-dark/styles.css
+++ b/mercury-server/web-app/css/themes/drastic-dark/styles.css
@@ -73,6 +73,13 @@ hr {
 }
 
 #user-navigation {
+  /*top: auto;*/
+  /*bottom: 5px;*/
+  /*right: 25px;*/
+}
+
+#search-box {
+  position: absolute;
   top: auto;
   bottom: 5px;
   right: 25px;
