MRY-130 Permitir en la lista de incidencias varias vistas (detalles y ampliada)

--- a/mercury-server/web-app/css/themes/drastic-dark/styles.css
+++ b/mercury-server/web-app/css/themes/drastic-dark/styles.css
@@ -259,6 +259,10 @@ hr {
   border-bottom:1px solid #F0F0EE;
 }
 
+.table tr.noborder td {
+  border-bottom:none;
+}
+
 .table tr.even {
   background: #ebebeb;
 }
