MRY-173 Mostrar navegacion en la pantalla de ver incidencia

--- a/mercury-server/web-app/css/custom.css
+++ b/mercury-server/web-app/css/custom.css
@@ -95,3 +95,15 @@
   background: #666666;
   color: #ffffff;;
 }
+
+
+.box{
+   background-color: #eee;padding: 4px;margin-top:10px;margin-bottom:10px;
+}
+.box-inner{
+   background-color: #fff;border: 1px solid #aaa;padding: 4px;
+}
+
+span.small{
+   font-size: 90%;
+}
