--- a/mercury-server/web-app/css/custom.css
+++ b/mercury-server/web-app/css/custom.css
@@ -124,3 +124,11 @@ a.completed{
   -moz-border-radius: 3px;
   border-radius: 3px;
 }
+
+.issueOptions {
+   visibility:hidden;
+   /*margin:.5em 0 .25em 0;*/
+}
+tr:hover .issueOptions, li:hover .issueOptions{
+   visibility:visible;
+}
